<resources>
    <string name="app_name">FilmForest</string>
    <string name="menu_header_text">Need a movie?</string>
    <string name="start_search_button">Start search</string>
    <string name="find_movie_button">Find a movie</string>
    <string name="search_by">Search by</string>
    <string name="search_results">Search results</string>
    <string name="genre">Genre</string>
    <string name="release_year">Release Year</string>
    <string name="runtime">Runtime</string>
    <string name="select_release_year">Select Release Year</string>
    <string name="select_runtime">Select Runtime</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="surprise_button">Surprise me</string>
    <string name="friends_picture">Friends watching a movie</string>
    <string name="home_button">Return to home screen</string>
    <string name="logo">Logo</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="horror">Horror</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="genre_header_text">Genre(s)</string>
    <string name="release_date_header_text">Release date</string>
    <string name="runtime_header_text">Runtime</string>
    <string name="rating_header_text">Average rating</string>
</resources>