<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="161dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_removebg_preview" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center|top"
        android:text="@string/menu_header_text"
        android:textAlignment="center"
        android:textColor="#214A00"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/friends_image"
        android:layout_width="268dp"
        android:layout_height="240dp"
        android:layout_marginTop="-15dp"
        android:contentDescription="@string/friends_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:srcCompat="@drawable/undraw_horror_movie_3988" />

    <Button
        android:id="@+id/main_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="@font/roboto_medium"
        android:paddingLeft="17dp"
        android:paddingBottom="10dp"
        android:paddingRight="17dp"
        android:paddingTop="10dp"
        android:text="@string/surprise_button"
        android:textAppearance="@style/button_text"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_screen_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="@font/roboto_medium"
        android:paddingLeft="17dp"
        android:paddingBottom="10dp"
        android:paddingRight="17dp"
        android:paddingTop="10dp"
        android:text="@string/start_search_button"
        android:textAppearance="@style/button_text"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>